--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -22,6 +22,8 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
   display: flex;
+  padding: 8px;
+  gap: 16px;
 }
 
 .icon {
@@ -35,8 +37,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 10px;
-  min-width: 42px;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -72,31 +73,14 @@ button.cancel {
   color: royalblue;
 }
 
-.card-content {
-  display: flex;
-  flex-direction: column;
-}
-
-.title-bar {
+.header {
   display: flex;
   justify-content: space-between;
-  margin: 8px;
-}
-
-.header {
+  font-size: 18px;
   font-weight: bold;
-  font-size: 20px;
+  margin-bottom: 8px;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin: 0 8px;
-}
-
-.buttons {
-  display: flex;
-  gap: 8px;
-  margin: 10px 0;
+.text {
+  margin-bottom: 8px
 }
