--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -7,8 +7,6 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  text-align: center;
 }
 
 img {
@@ -20,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px 16px;
 }
 
 input {
@@ -29,19 +28,11 @@ input {
   width: 400px;
 }
 
-.left-links,
-.right-links {
-  display: flex;
-  gap: 10px;
-  padding: 0;
-}
-
 .header,
 .footer {
   display: flex;
   justify-content: space-between;
-  flex-shrink: 0;
-  padding: 0 16px;
+  padding: 16px;
 }
 
 .footer {
@@ -50,6 +41,10 @@ input {
 
 ul {
   list-style: none;
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0px;
 }
 
 a {
@@ -57,6 +52,11 @@ a {
   color: black;
 }
 
-.content>* {
-  margin-bottom: 10px;
+.content {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 16px;
 }
